--- a/Medidata.Rave.Tsdv.Loader.Sample/unity.config
+++ b/Medidata.Rave.Tsdv.Loader.Sample/unity.config
@@ -4,5 +4,9 @@
   <container>
     <register type="Medidata.Interfaces.Localization.ILocalization, Medidata.Interfaces"
               mapTo="Medidata.Rave.Tsdv.Loader.Sample.Localization, Medidata.Rave.Tsdv.Loader.Sample" />
+    <register type="Medidata.Rave.Tsdv.Loader.ITsdvExcelLoaderFactory, Medidata.Rave.Tsdv.Loader"
+          mapTo="Medidata.Rave.Tsdv.Loader.TsdvExcelLoaderFactory, Medidata.Rave.Tsdv.Loader" >
+      <lifetime type="singleton" />
+    </register>
   </container>
 </unity>
