--- a/Medidata.Cloud.ExcelLoader/Medidata.Cloud.ExcelLoader.nuspec
+++ b/Medidata.Cloud.ExcelLoader/Medidata.Cloud.ExcelLoader.nuspec
@@ -1,16 +1,15 @@
 <?xml version="1.0"?>
-
 <package>
   <metadata>
     <id>Medidata.Cloud.ExcelLoader</id>
-    <version>0.1.5</version>
+    <version>0.1.6</version>
     <title>Medidata.Cloud.ExcelLoader</title>
     <authors>jshao@mdsol.com,echen@mdsol.com,chuang@mdsol.com</authors>
     <owners>jshao@mdsol.com,echen@mdsol.com,chuang@mdsol.com</owners>
     <projectUrl>https://github.com/junshao/Medidata.Cloud.Tsdv.Loader</projectUrl>
     <requireLicenseAcceptance>false</requireLicenseAcceptance>
     <description>Medidata Excel builder and parser for unloading and downloading</description>
-    <releaseNotes>Add column width auto fit feature and XML namespace improvement.</releaseNotes>
+    <releaseNotes>Duplicate extra properties won't raise exceptions.</releaseNotes>
     <copyright>Copyright 2015</copyright>
     <tags>Excel builder parser loader</tags>
     <dependencies>
